# colournaming

./: .babelrc  .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  app.py  babel.cfg  build.py  col_bg_targets.csv  colbg_fg_targets.csv  colnam.sh  colourBG_10.csv  colourStimuli_226.csv  config.py  dev-requirements.in  dev-requirements.txt  docker-compose.prod.yml  docker-compose.yml  docker.cfg  github.cfg  index.html  make_all_translations.sh  make_translation.py  messages.pot  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  requirments.txt  run.py  setup.cfg  setup.py  targets.csv  webpack.config.js
.circleci/: config.yml  known_hosts
.github/workflows/: build_develop.yml  build_production.yml  lint_and_test.yml  main.yml
assets/css/: namer.css  styles-experiment.css  styles.css
assets/js/: audio.js  colour-namer.js  colour_experiment.js  colour_vision.js  experiment.js  namer.js
colournaming/: __init__.py  database.py  utils.py
colournaming/admin/: controller.py  forms.py  views.py
colournaming/experiment/: controller.py  forms.py  model.py  views.py
colournaming/experimentcol/: controller.py  forms.py  model.py  targets.py  views.py
colournaming/experimentcolbg/: controller.py  forms.py  model.py  views.py
colournaming/home/: forms.py  views.py
colournaming/mturk/: controller.py  exceptions.py  forms.py  model.py  views.py
colournaming/mturkage/: controller.py  forms.py  model.py  views.py
colournaming/namer/: controller.py  forms.py  model.py  views.py
colournaming/static/: babel-polyfill.js  bundle.js  experiment.js  experiment.js.map  initnamer-mobile.js  initnamer.js  namer.js  namer.js.map  robots.txt  whatwg-fetch.js
colournaming/static/css/: namer.css  namer.css.map  styles-experiment.css  styles-experiment.css.map  styles.css  (+1 more)
colournaming/templates/: 401.html  404.html  admin_menu.html  base.html  base_experiment.html  colour_vision.html  contact.html  display_properties.html  form_helpers.j2  index.html  index_translate.html  login.html  match_description.html  name_colour.html  namer-mobile.html  namer.html  navbar.html  observer_information.html  research.html  terms_and_conditions.html  thankyou.html
docs/: dataset_en.csv
html/: index.html
tests/: test_home.py
(+70 files in other folders)
